CHANGES.txt - 2.0.2 - 2015-01-29
--------------------------------

CHANGES IN CUPS V2.0.2

	- Command-line programs were not localized on Mac OS X
	  (<rdar://problem/14546232>)
	- The scheduler incorrectly cleared the MakeModel string in the
	  printers.conf file after a restart (<rdar://problem/16827518>)
	- CUPS did not compile with older versions of GNU TLS (STR #4527)
	- CUPS did not compile without Avahi or mDNSResponder (STR #4523)
	- ippLength() did not return the correct length for IPP_TAG_CONST string
	  values.
	- The scheduler incorrectly aborted jobs after a job was restarted
	  (<rdar://problem/19129387>)
	- The cups-files.conf file contained the old ServerCertificate/Key
	  directives instead of ServerKeychain.
	- Fixed builds when no SSL/TLS library is available, or when explicitly
	  disabled (STR #4531)
	- Fixed an OpenBSD charset transcoding issue.
	- Fixed USB printing on OpenBSD (STR #4525)
	- The --without-xinetd configure option did not work (STR #4542)
	- Backends needing to load OS X kernel extensions did not work
	  (<rdar://problem/19015679>)
	- Mapping of PPD keywords to IPP keywords did not work if the PPD
	  keyword was already an IPP keyword (<rdar://problem/19121005>)
	- cupsGetPPD* sent bad requests (STR #4567)


CHANGES IN CUPS V2.0.1

	- Security: SSLv3 is now disabled by default to protect against the
	  POODLE attack (STR #4476)
	- Printer sharing did not work when systemd was being used (STR #4497)
	- cupsGetPPD* would return a symlink to the PPD in /etc/cups/ppd even if
	  it was not readable by the user (STR #4500)
	- The web interface now protects against frame "click-jacking" attacks
	  (STR #4492)
	- Fixed a crash in ippAttributeString (<rdar://problem/17903871>)
	- Fixed a crash in the scheduler on Linux/*BSD if colord was not running
	  (STR #4496)
	- Fixed a random crash in the scheduler when not using systemd
	  (STR #4484)
	- Added systemd support for cups-lpd (STR #4493)