@@ -1,8 +1,10 @@
-CHANGES.txt - 2.0.2 - 2015-01-29
+CHANGES.txt - 2.0.2 - 2015-01-30
 --------------------------------
 
 CHANGES IN CUPS V2.0.2
 
+	- Security: cupsRasterReadPixels buffer overflow with invalid page
+	  header and compressed raster data (STR #4551)
 	- Command-line programs were not localized on Mac OS X
 	  (<rdar://problem/14546232>)
 	- The scheduler incorrectly cleared the MakeModel string in the
